--- a/.obsidian/config
+++ b/.obsidian/config
@@ -18,7 +18,7 @@
     "type": "split",
     "children": [
       {
-        "id": "4b3339d9fec04bba",
+        "id": "59e7f7ea5fce056f",
         "type": "leaf",
         "active": true,
         "state": {
@@ -30,11 +30,11 @@
     "direction": "vertical"
   },
   "lastOpenFiles": [
+    "internet/Untitled.md",
     "dev/vcs/conventional commits.md",
     "dev/vcs/git tricks.md",
     "food/Тесто для блинов.md",
-    "food/Тесто для пиццы.md",
-    "кулинария/Тесто для блинов.md"
+    "food/Тесто для пиццы.md"
   ],
   "leftSidedock": {
     "id": "035b7b38bf351571",
