--- a/.obsidian/config
+++ b/.obsidian/config
@@ -12,81 +12,5 @@
   },
   "isSidebarCollapsed": false,
   "isRightSidedockCollapsed": true,
-  "lastOpenSidebarTab": "Search in files",
-  "workspaceLayout": {
-    "id": "5d393c3cf367ca79",
-    "type": "split",
-    "children": [
-      {
-        "id": "59e7f7ea5fce056f",
-        "type": "leaf",
-        "active": true,
-        "state": {
-          "type": "empty",
-          "state": {}
-        }
-      }
-    ],
-    "direction": "vertical"
-  },
-  "lastOpenFiles": [
-    "internet/Untitled.md",
-    "dev/vcs/conventional commits.md",
-    "dev/vcs/git tricks.md",
-    "food/Тесто для блинов.md",
-    "food/Тесто для пиццы.md"
-  ],
-  "leftSidedock": {
-    "id": "035b7b38bf351571",
-    "type": "split",
-    "children": [
-      {
-        "id": "bc5713c1f652c8c2",
-        "type": "tabs",
-        "children": [
-          {
-            "id": "decea0b75a61a391",
-            "type": "leaf",
-            "state": {
-              "type": "file-explorer",
-              "state": {}
-            }
-          },
-          {
-            "id": "b380aad5beff5638",
-            "type": "leaf",
-            "state": {
-              "type": "search",
-              "state": {}
-            }
-          }
-        ]
-      }
-    ],
-    "direction": "horizontal",
-    "width": 300
-  },
-  "rightSidedock": {
-    "id": "7a035ca94d8c6ec2",
-    "type": "split",
-    "children": [
-      {
-        "id": "b03b70cec2bc026b",
-        "type": "tabs",
-        "children": [
-          {
-            "id": "cec5556c823db476",
-            "type": "leaf",
-            "state": {
-              "type": "backlink",
-              "state": {}
-            }
-          }
-        ]
-      }
-    ],
-    "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
-  }
+  "lastOpenSidebarTab": "Search in files"
 }
