--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "ca6a1f5ecd309ffc",
+        "id": "1fd7139d2c516107",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "dev/python/misc.md",
+            "file": "dev/vcs/git tricks.md",
             "mode": "source"
           }
         }
@@ -72,10 +72,10 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "dev/python/Untitled.md",
     "dev/vcs/git tricks.md",
+    "dev/python/misc.md",
+    "dev/python/Untitled.md",
     "dev/vcs/conventional commits.md",
-    "internet/yota.md",
-    "internet/Untitled.md"
+    "internet/yota.md"
   ]
 }
